# oracle_oci_switch_session

./: .gitignore  CMakeLists.txt  README.md  checkerr.h  oci_common.c  oci_common.h  oci_test_switch_session.sln  oci_test_switch_session.vcxproj  oci_test_switch_session.vcxproj.filters  prepare.sql  switching.c
